fix some overflowing text

--- a/css/main.scss
+++ b/css/main.scss
@@ -73,11 +73,15 @@ th {
   padding: 0 1rem;
 }
 
+.language-html{
+  font-size: 16px;
+}
+
 .nav-container {
   display: flex;
   flex-direction: column;
   position: sticky;
-  width: 30%;
+  width: 25%;
   max-width: 360px;
   height: 100vh;
   top: 0;
